--- a/index.html
+++ b/index.html
@@ -1,64 +1,32 @@
 <html>
-	
+
 <head>
 
 	<style>
-	
-		html {
-			margin:0;
-			padding:0;
-			display:block;
-			width:100%;
-		}
 		
-		body {
-			margin:0;
-			padding:0;
-			display:block;
-			width:100%;
-		}
-	
-		iframe {
-			border:0;
-			height: 100%;
-			width: 14.2857%;
-			float:left;
-			display:block;
-		}
-		
-		.menu_superior_subpaginas {
-		
-		
-			background: red;
-			display: block;
-			top: 0;
-			left: 0;
-			position: relative;
-			width: 100%;
-			height: 40px;
-		}
+		a { opacity:0.5;}
+		a:hover { opacity:1;}
 		
 	</style>
-	
-	<script src="/_assets/js/jquery.js"></script>
-	
-	
+
 </head>
 
 <body>
-	
-	<div class="navegacao">
-	
-	
-	</div>
-	<div class="paginas"></div>
-	
-	<iframe id="iframe_menu" src="http://restaurante.com/menu.php"></iframe>
 
+<table style="width:100%;height: 100%; text-align:center; vertical-align: middle;">
+<tr>
+	<td>
+	
+		<img src="/_assets/img/versoes_01.png" />
+			<br />
+		<a href="menu.php"><img src="/_assets/img/versoes_02.png" /></a>
+		<a href="tablet.html"><img src="/_assets/img/versoes_03.png" /></a>
+		<a href="celular.html"><img src="/_assets/img/versoes_04.png" /></a>
+		
+	</td>
+</tr>
+</table>
 
 </body>
-
-
-	<script src="/_assets/js/meu_script.js"></script>
 
 </html>
