--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 		<img src="/_assets/img/versoes_01.png" />
 			<br />
-		<a href="menu.php"><img src="/_assets/img/versoes_02.png" /></a>
+		<a href="login.php"><img src="/_assets/img/versoes_02.png" /></a>
 		<a href="tablet.html"><img src="/_assets/img/versoes_03.png" /></a>
 		<a href="celular.html"><img src="/_assets/img/versoes_04.png" /></a>
 		
