--- a/navegacao_mobile.html
+++ b/navegacao_mobile.html
@@ -53,7 +53,7 @@
 	</div>
 	<div class="paginas"></div>
 	
-	<iframe id="iframe_menu" src="http://restaurante.com/menu.php"></iframe>
+	<iframe id="iframe_menu" src="/menu.php"></iframe>
 
 
 </body>
