--- a/index_escolhe.html
+++ b/index_escolhe.html
@@ -19,9 +19,9 @@
 	
 		<img src="/_assets/img/versoes_01.png" />
 			<br />
-		<a href="login.php"><img src="/_assets/img/versoes_02.png" /></a>
-		<a href="tablet.html"><img src="/_assets/img/versoes_03.png" /></a>
-		<a href="celular.html"><img src="/_assets/img/versoes_04.png" /></a>
+		<a href="menu.php"><img src="/_assets/img/versoes_02.png" /></a>
+		<a href="tablet.php"><img src="/_assets/img/versoes_03.png" /></a>
+		<a href="celular.php"><img src="/_assets/img/versoes_04.png" /></a>
 		
 	</td>
 </tr>
